@@ -4,6 +4,7 @@ vX.Y.Z (YYYY-MM-DD)
   New Order transactions
 - Rename post-process.sql to post-process.sqlite3
 - Update AppImage container file to use Ubuntu 14.04
+- Add missing libraries to AppImage for gnuplot
 
 v0.53.1 (2023-05-20)
 
